# m-dashboard

./: .env  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/auth/: dependencies.py
backend/auth/api/: __init__.py  auth_api.py  schemas.py
backend/auth/enum/: token_type.py
backend/auth/helper/: token.py
backend/auth/model/: user.py
backend/auth/repository/: user_repository.py
backend/auth/service/: auth_service.py
backend/chart/line-basic/: prompt.py  schema.py
backend/chat/api/: __init__.py  chat_api.py
backend/chat/helper/: llm_client.py
backend/chat/prompt/: base_prompt.py
backend/core/: config.py  middleware.py  mongodb.py  redis.py  service.py
